se agrega el metodo de paginacion ademas de agregar  la vista prediseñada para mostrar los datos de la paginacion.

--- a/Views/profesiones/Delete.cshtml
+++ b/Views/profesiones/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TrainingDBase5ticg3.Models.profesiones
+﻿@model TrainingDBase5ticg3.ViewModels.ProfesionesVM
 
 @{
     ViewBag.Title = "Delete";
@@ -35,7 +35,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Regresar a la Lista", "Index")
         </div>
     }
 </div>
