--- a/Views/profesiones/Create.cshtml
+++ b/Views/profesiones/Create.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm())
+@*@using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
+    @Html.AntiForgeryToken()*@
 
     <div class="container-fluid">
 
@@ -20,29 +20,33 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                            <label class="text-black">Nombre de la Profesión:</label>
-                            @Html.EditorFor(model => model.strValor, new { htmlAttributes = new { @class = "form-control form-control-sm", required = "required" } })
-                            @Html.ValidationMessageFor(model => model.strValor, "", new { @class = "text-danger" })
+                    <form id="profesionesForm">
+                        @Html.AntiForgeryToken()
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                                <label class="text-black">Nombre de la Profesión:</label>
+                                @Html.EditorFor(model => model.strValor, new { htmlAttributes = new { @class = "form-control form-control-sm", required = "required" } })
+                                @Html.ValidationMessageFor(model => model.strValor, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                                <label class="text-black">Descripción</label>
+                                @Html.EditorFor(model => model.strDescripcion, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                @Html.ValidationMessageFor(model => model.strDescripcion, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                            <label class="text-black">Descripción</label>
-                            @Html.EditorFor(model => model.strDescripcion, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
-                            @Html.ValidationMessageFor(model => model.strDescripcion, "", new { @class = "text-danger" })
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mt-3 d-flex justify-content-start">
+                                <input type="submit" value="Crear" class="btn btn-dark btn-group-lg w-25" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mt-3 d-flex justify-content-start">
-                            <input type="submit" value="Crear" class="btn btn-dark btn-group-lg w-25" />
-                        </div>
-                    </div>
+                    </form>
+
                 </div>
             </div>
         </div>
     </div>
 
-}
+@*}*@
 
 <div>
     @Html.ActionLink("Regresar al Listado", "Index")
