--- a/Views/profesiones/Index.cshtml
+++ b/Views/profesiones/Index.cshtml
@@ -5,36 +5,57 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container-fluid">
+    <div class="row">
+        <div class="card shadow p-3 mb-5 bg-body rounded">
+            <div class="card-body">
+                <div class="card-title">
+                    <h5>Listado de Licenciaturas registradas</h5>
+                </div>
+                <div class="card-text">
+                    <p>
+                        @Html.ActionLink("Crear Nuevo", "Create",new { @class = "btn btn-dark btn-group-lg w-25"  })
+                    </p>
+                    <table class="table table-bordered table-sm table-striped">
+                        <tr>
+                            <th>
+                                <label class="text-black">Licenciatura</label>
+                            </th>
+                            <th>
+                                <label class="text-black">Descripción</label>
+                            </th>
+                            <th></th>
+                        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.strValor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.strDescripcion)
-        </th>
-        <th></th>
-    </tr>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.strValor)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.strDescripcion)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Detalle", "Details", new { id = item.Id }) |
+                                    @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+                                </td>
+                            </tr>
+                        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.strValor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.strDescripcion)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-</table>
+
+
+
+
+
+
+
+
