--- a/Views/profesiones/Edit.cshtml
+++ b/Views/profesiones/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TrainingDBase5ticg3.Models.profesiones
+﻿@model TrainingDBase5ticg3.ViewModels.ProfesionesVM
 
 @{
     ViewBag.Title = "Edit";
