--- a/Views/profesiones/Create.cshtml
+++ b/Views/profesiones/Create.cshtml
@@ -16,7 +16,10 @@
         <div class="card shadow-lg p-3 mb-5 bg-body rounded">
             <div class="card-header">
                 <div class="card-title">
-                    <h4>Profesiones</h4>
+                    <h4 class="roboto-thin-ExtraLight-200">
+                        <i class="fa-solid fa-user-tie"></i>
+                    Profesiones
+                    </h4>
                 </div>
             </div>
             <div class="card-body">
@@ -24,19 +27,20 @@
                     @Html.AntiForgeryToken()
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                            <label class="text-black">Nombre de la Profesión:</label>
+                            <label class="text-black roboto-thin-ExtraLight-200">Nombre de la Profesión:</label>
                             @Html.EditorFor(model => model.strValor, new { htmlAttributes = new { @class = "form-control form-control-sm", required = "required" } })
                             @Html.ValidationMessageFor(model => model.strValor, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                            <label class="text-black">Descripción</label>
+                            <label class="text-black roboto-thin-ExtraLight-200">Descripción</label>
                             @Html.EditorFor(model => model.strDescripcion, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
                             @Html.ValidationMessageFor(model => model.strDescripcion, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mt-3 d-flex justify-content-start">
-                            <input type="submit" value="Crear" class="btn btn-dark btn-group-lg w-25" />
+                        <div class="col-12 mt-3 d-flex justify-content-start">
+                            <input type="submit" value="Crear" class="btn btn-dark btn-group-lg me-2 roboto-thin-ExtraLight-200 w-25" />
+                            @Html.ActionLink("Regresar al Listado", "Index", null, new { @class = "btn btn-secondary btn-group-lg w-25" })
                         </div>
                     </div>
                 </form>
@@ -48,9 +52,6 @@
 
 @*}*@
 
-<div>
-    @Html.ActionLink("Regresar al Listado", "Index")
-</div>
 <link href="~/Content/toastr.min.css" rel="stylesheet" />
 <script src="~/Scripts/toastr.min.js"></script>
 @section Scripts {
