--- a/Content/fonts-roboto.css
+++ b/Content/fonts-roboto.css
@@ -1,6 +1,9 @@
 ﻿.title-morado {
     color: #5a189a;
 }
+.title-size-max {
+       font-size:large;
+ }
 .roboto-thin-100 {
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
@@ -76,3 +79,19 @@ h4 {
     h4:hover {
         color: #5a189a; /* Cambia a morado cuando se pasa el cursor */
     }
+
+.btn-bd-morado {
+    --bs-btn-font-weight: 600;
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: var(--bd-violet);
+    --bs-btn-border-color: var(--bd-violet);
+    --bs-btn-border-radius: .5rem;
+    --bs-btn-hover-color: var(--bs-violet);
+    --bs-btn-hover-bg: #{shade-color($bd-violet, 10%)};
+    --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
+    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #{shade-color($bd-violet, 20%)};
+    --bs-btn-active-border-color: #{shade-color($bd-violet, 20%)};
+    background-color: #5a189a;
+}
