se modifica la interfaz  de usuario para poder subir o cargar una imagen

--- a/Views/Personas/Perfil.cshtml
+++ b/Views/Personas/Perfil.cshtml
@@ -27,10 +27,8 @@
            
         </div>
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 justify-content-end">
-            <label class="roboto-Black-900">
-                <i class="fa-solid fa-circle-user"></i>
-            </label>
-           
+            <img src="~/Images/user_anonimo.webp" alt="Descripción de la imagen">
+
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mt-2 d-flex">
             <div class="mb-3 justify-content-sm-start">
