se agrega nuevo estilo de css que nos aydua a generar un mejor perfil de usuario.

--- a/Content/fonts-roboto.css
+++ b/Content/fonts-roboto.css
@@ -5,8 +5,11 @@
        font-size:large;
  }
 .header-modal {
-    background-color: #5a189a;
+    background-color: #5a189a !important;
    }
+.header-color-text {
+    color:white;
+}
 .roboto-thin-100 {
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
